--- a/conFusion/package.json
+++ b/conFusion/package.json
@@ -14,8 +14,9 @@
     "lite-server": "^2.5.4"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.12.9"
+    "bootstrap": "^4.4.1",
+    "heroku": "^7.40.0",
+    "jquery": "^3.5.0",
+    "popper.js": "^1.16.0"
   }
 }
